--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.35.5",
+    "@prisma/client": "^6.19.0",
     "next": "16.0.6",
+    "prisma": "^6.19.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
